--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,6 +4,12 @@
       android:versionCode="1"
       android:versionName="1.0">
     <uses-sdk android:minSdkVersion="5" />
+    <permission android:name="android.permission.ACCESS_NETWORK_STATE"></permission>
+    <permission android:name="android.permission.INTERNET"></permission>
+    <permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE"></permission>
+    <permission android:name="android.permission.ACCESS_WIFI_STATE"></permission>
+    <permission android:name="android.permission.CHANGE_NETWORK_STATE"></permission>
+    <permission android:name="android.permission.CHANGE_WIFI_STATE"></permission>
 
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".MainActivity"
