--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,17 +3,14 @@
       package="com.goby.airtv"
       android:versionCode="1"
       android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="5" />
-    <permission android:name="android.permission.ACCESS_NETWORK_STATE"></permission>
-    <permission android:name="android.permission.INTERNET"></permission>
-    <permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE"></permission>
-    <permission android:name="android.permission.ACCESS_WIFI_STATE"></permission>
-    <permission android:name="android.permission.CHANGE_NETWORK_STATE"></permission>
-    <permission android:name="android.permission.CHANGE_WIFI_STATE"></permission>
+    <uses-sdk android:minSdkVersion="5"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
 
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".MainActivity"
-                  android:label="@string/app_name">
+    <application android:label="@string/app_name" android:icon="@drawable/icon">
+        <activity android:label="@string/app_name" android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
